# optimus

./: ReadMe.md
catkin_ws/src/optimus/: CMakeLists.txt  package.xml
catkin_ws/src/optimus/config/: control.yaml  joint_names_optimus.yaml
catkin_ws/src/optimus/launch/: different_namespaces.launch  gazebo.launch  optimus.launch
catkin_ws/src/optimus/meshes/: FL_inner_wheel_connector_link.STL  FL_inner_wheel_link.STL  FL_mid_connector_link.STL  FL_outer_wheel__link.STL  FL_outer_wheel_connector_link.STL  FL_wheel_connector_link.STL  FL_wheel_link.STL  FR_inner_wheel_connector_link.STL  FR_inner_wheel_link.STL  FR_mid_connector_link.STL  FR_outer_wheel_connector_link.STL  FR_outer_wheel_link.STL  FR_wheel_connector_link.STL  FR_wheel_link.STL  F_bogie_link.STL  RL_inner_wheel_connector_link.STL  RL_inner_wheel_link.STL  RL_mid_connector_link.STL  RL_outer_wheel_connector_link.STL  RL_outer_wheel_link.STL  RL_wheel_connector_link.STL  RL_wheel_link.STL  RR_inner_wheel_connector_link.STL  RR_inner_wheel_link.STL  RR_mid_connector_link.STL  RR_outer_wheel_connector_link.STL  RR_outer_wheel_link.STL  RR_wheel_connector_link.STL  RR_wheel_link.STL  R_bogie_link.STL  base_link.STL  chassis_link.STL  chassis_link_BACKUP.STL
catkin_ws/src/optimus/rviz/: visualize.rviz
catkin_ws/src/optimus/scripts/: UR10_FK_IK.py  UR10_IK_Validation.py  UR10_teleop.py  optimus_teleop.py  publisher_subscriber.py  teleop.py
catkin_ws/src/optimus/urdf/: optimus.csv  optimus.urdf  optimus.urdf.xacro  optimus_complete.urdf  (+1 more)
catkin_ws/src/optimus_rear/: CMakeLists.txt  package.xml
(+171 files in other folders)
